# png2svg

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
png2svg/: __init__.py  _core.pyi  core.py
png2svg-core/: Cargo.toml
png2svg-core/examples/: convert.rs  parallel_convert.rs
png2svg-core/src/: convert.rs  error.rs  lib.rs
src/: ffi.rs  lib.rs
