[project]
name = "png2svg"
version = "0.1.0"
description = "PNG to SVG converter."
readme = "README.md"
authors = [{ name = "tangxiangong", email = "tangxiangong@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[tool.maturin]
module-name = "png2svg._core"
python-packages = ["png2svg"]
python-source = "."

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
