[project]
name = "png2svg"
version = "0.1.0"
description = "PNG to SVG converter."
readme = "README.md"
authors = [{ name = "tangxiangong", email = "tangxiangong@gmail.com" }]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "png2svg._core"
python-packages = ["png2svg"]
python-source = "."

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
