[package]
name = "png2svg-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "png",
    "rayon",
] }
rayon = { workspace = true }
thiserror = "2"
vtracer = "0.6"
visioncortex = "0.8"
